modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/extend_variable.gd
# GH-75870

var A = 1

class B extends A:
	pass

func test():
	pass
